# beskar-os

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
beskar-core/: Cargo.toml  README.md
beskar-core/src/: arch.rs  boot.rs  drivers.rs  lib.rs  mem.rs  process.rs  storage.rs  syscall.rs  time.rs  video.rs
beskar-core/src/arch/: aarch64.rs  addrs.rs  commons.rs  paging.rs  x86_64.rs
beskar-core/src/arch/commons/: addrs.rs  paging.rs
beskar-core/src/arch/commons/paging/: frame.rs  page.rs
beskar-core/src/arch/paging/: frame.rs  page.rs
beskar-core/src/arch/x86_64/: instructions.rs  paging.rs  port.rs  registers.rs  structures.rs  userspace.rs
beskar-core/src/arch/x86_64/paging/: page_table.rs
beskar-core/src/arch/x86_64/port/: serial.rs
beskar-core/src/drivers/: keyboard.rs
beskar-core/src/mem/: ranges.rs
beskar-core/src/process/: binary.rs
beskar-core/src/video/: writer.rs
beskar-core/src/video/writer/: chars.rs
bootloader/: Cargo.toml  README.md
bootloader/bootloader-api/: Cargo.toml
bootloader/bootloader-api/src/: lib.rs
bootloader/src/: framebuffer.rs  fs.rs  info.rs  kernel_elf.rs  lib.rs  log.rs  logging.rs  main.rs  mem.rs  structs.rs  system.rs  video.rs
bootloader/src/arch/: aarch64.rs  x86_64.rs
bootloader/src/arch/x86_64/: acpi.rs
bootloader/src/log/: writer.rs
bootloader/src/mem/: phys.rs  virt.rs
bootloader/src/system/: acpi.rs
bootloader/src/video/: gop.rs  log.rs
kernel/: Cargo.toml  README.md
kernel/driver-api/: Cargo.toml
kernel/driver-api/src/: lib.rs
kernel/foundry/acpi/: Cargo.toml
kernel/foundry/acpi/src/: aml.rs  lib.rs  rsdp.rs  sdt.rs
kernel/foundry/acpi/src/sdt/: dsdt.rs  fadt.rs  hpet_table.rs  madt.rs  mcfg.rs
kernel/foundry/driver-shared/: Cargo.toml
kernel/foundry/driver-shared/src/: lib.rs  mmio.rs
kernel/foundry/holonet/: README.md
kernel/foundry/holonet/src/: lib.rs  utils.rs
kernel/foundry/holonet/src/l3/: arp.rs  ip.rs
kernel/foundry/holonet/src/l4/: icmp.rs  tcp.rs  udp.rs
kernel/foundry/pci/: Cargo.toml
kernel/foundry/pci/src/: commons.rs  express.rs  legacy.rs  lib.rs
kernel/foundry/pci/src/commons/: msi.rs  msix.rs
kernel/foundry/storage/: Cargo.toml
kernel/foundry/storage/src/: fs.rs  lib.rs  vfs.rs
kernel/foundry/storage/src/fs/: dev.rs  fat.rs  in_mem.rs
kernel/foundry/storage/tests/: mock.rs
kernel/foundry/video/src/: lib.rs  log.rs  screen.rs
kernel/src/: acpi.rs  arch.rs  boot.rs  cpu.rs  drivers.rs  io.rs  lib.rs  locals.rs  log.rs  logging.rs  main.rs  mem.rs  network.rs  pci.rs  process.rs  screen.rs  serial.rs  storage.rs  syscall.rs  time.rs  utils.rs  video.rs
kernel/src/acpi/: hpet.rs  pmap.rs  rsdp.rs  sdt.rs
kernel/src/acpi/sdt/: fadt.rs  hpet_table.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/commons/: addrs.rs  paging.rs
kernel/src/arch/commons/paging/: frame.rs  page.rs
kernel/src/arch/x86_64/: ap.rs  apic.rs  context.rs  cpuid.rs  fpu.rs  gdt.rs  interrupts.rs  locals.rs  paging.rs  rand.rs  registers.rs  syscall.rs  userspace.rs
kernel/src/arch/x86_64/ap/: ap_tramp  ap_tramp.asm
kernel/src/arch/x86_64/apic/: ipi.rs  timer.rs
kernel/src/arch/x86_64/paging/: page_table.rs
kernel/src/arch/x86_64/serial/: com.rs
kernel/src/boot/: acpi.rs
kernel/src/boot/acpi/: rsdp.rs  sdt.rs
kernel/src/boot/acpi/sdt/: fadt.rs  hpet_table.rs  madt.rs  mcfg.rs
kernel/src/cpu/: apic.rs  context.rs  cpuid.rs  gdt.rs  hpet.rs  interrupts.rs  rand.rs
kernel/src/cpu/apic/: ap.rs  ap_tramp  ap_tramp.asm  ipi.rs  timer.rs
kernel/src/drivers/: acpi.rs  hpet.rs  keyboard.rs  network.rs  nic.rs  pci.rs  ps2.rs  storage.rs  tsc.rs  usb.rs
kernel/src/drivers/acpi/: aml.rs  rsdp.rs  sdt.rs
kernel/src/drivers/acpi/sdt/: dsdt.rs  fadt.rs  hpet_table.rs  madt.rs  mcfg.rs
kernel/src/drivers/network/: nic.rs  structs.rs
kernel/src/drivers/network/nic/: e1000e.rs
kernel/src/drivers/nic/: e1000e.rs
kernel/src/drivers/nic/e1000e/: descriptors.rs  registers.rs
kernel/src/drivers/pci/: commons.rs  express.rs  legacy.rs
kernel/src/drivers/pci/commons/: msi.rs  msix.rs
kernel/src/drivers/ps2/: controller.rs  error.rs  keyboard.rs
kernel/src/drivers/ps2/keyboard/: decoder.rs  keycodes.rs
kernel/src/drivers/storage/: ahci.rs  nvme.rs
kernel/src/drivers/storage/ahci/: command.rs  fis.rs  port.rs  registers.rs
kernel/src/drivers/storage/nvme/: queue.rs
kernel/src/drivers/usb/: device.rs  host.rs
kernel/src/drivers/usb/host/: xhci.rs
kernel/src/holonet/: Cargo.toml
kernel/src/holonet/src/: lib.rs  utils.rs
kernel/src/holonet/src/l2/: ethernet.rs
kernel/src/holonet/src/l3/: arp.rs
kernel/src/io/: usb.rs
kernel/src/io/usb/: host.rs
kernel/src/io/usb/host/: xhci.rs
kernel/src/log/: writer.rs
kernel/src/logging/: writer.rs
kernel/src/mem/: address_space.rs  frame_alloc.rs  heap.rs  page_alloc.rs  page_table.rs  ranges.rs
kernel/src/mem/page_alloc/: pmap.rs
kernel/src/network/: Cargo.toml  nic.rs  structs.rs
kernel/src/network/l2/: ethernet.rs
kernel/src/network/l3/: ip.rs
kernel/src/network/nic/: e1000e.rs
kernel/src/network/src/: lib.rs
kernel/src/network/src/l2/: ethernet.rs
kernel/src/pci/: commons.rs  express.rs  legacy.rs
kernel/src/pci/commons/: msi.rs  msix.rs
kernel/src/pci/express/: msix.rs
kernel/src/process/: binary.rs  dummy.rs  scheduler.rs
kernel/src/process/binary/: elf.rs
kernel/src/process/scheduler/: priority.rs  sleep.rs  thread.rs
kernel/src/screen/: pixel.rs
kernel/src/serial/: com.rs  logging.rs
kernel/src/storage/: Cargo.toml  fs.rs  vfs.rs
kernel/src/storage/fs/: fat32.rs
kernel/src/storage/src/: fs.rs  lib.rs  vfs.rs
kernel/src/storage/src/fs/: dev.rs  (+1 more)
kernel/src/storage/tests/: fat.rs  mock.rs
kernel/src/time/: hpet.rs  tsc.rs
kernel/src/utils/: locks.rs  once.rs  rand.rs
kernel/src/utils/locks/: mcs.rs
kernel/src/video/: Cargo.toml
kernel/src/video/src/: log.rs  screen.rs
userspace/bashkar/: Cargo.toml  README.md
userspace/bashkar/src/: commands.rs  lib.rs  main.rs  video.rs
userspace/bashkar/src/video/: screen.rs  tty.rs  ui.rs
(+119 files in other folders)
