[package]
name = "beskar-os"
version = "0.1.0"
edition = "2024"
authors = ["mathisbot"]
description = "Basic 64-bit hobby OS that supports SMP and UEFI 2 booting"
license = "MIT"
repository = "https://github.com/mathisbot/beskar-os/"

[workspace]
members = ["beskar-core", "beskar-lib", "bootloader", "hyperdrive", "kernel", "userspace/helloworld"]

[workspace.dependencies]
beskar-core = { path = "beskar-core" }
beskar-lib = { path = "beskar-lib" }
bootloader = { path = "bootloader" }
hyperdrive = { path = "hyperdrive" }
thiserror = { version = "2.0.12", default-features = false }
x86_64 = { version = "0.15.2", default-features = false, features = ["abi_x86_interrupt","instructions"] }
xmas-elf = "0.10.0"

[build-dependencies]
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
hello_world = { path = "userspace/helloworld", artifact = "bin", target = "x86_64-unknown-none" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
