[package]
name = "beskar-os"
version = "0.1.0"
edition = "2024"
authors = ["mathisbot"]
description = "Basic 64-bit hobby OS that supports SMP and UEFI 2 booting"
license = "MIT"
repository = "https://github.com/mathisbot/beskar-os/"

[workspace]
members = ["beskar-core", "beskar-hal", "beskar-lib", "bootloader", "hyperdrive", "kernel", "userspace/sh"]

[workspace.dependencies]
beskar-core = { path = "beskar-core" }
beskar-hal = { path = "beskar-hal" }
beskar-lib = { path = "beskar-lib" }
bootloader = { path = "bootloader" }
hyperdrive = { path = "hyperdrive" }
thiserror = { version = "2.0.12", default-features = false }
xmas-elf = "0.10.0"

[build-dependencies]
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
sh = { path = "userspace/sh", artifact = "bin", target = "x86_64-unknown-none" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
