[package]
name = "beskar-os"
version = "0.1.0"
edition = "2024"
authors = ["mathisbot"]
description = "Basic 64-bit hobby OS that supports SMP and UEFI 2 booting"
license = "MIT"
repository = "https://github.com/mathisbot/beskar-os/"

[workspace]
members = ["bootloader", "kernel", "userspace/*"]

[workspace.dependencies]
beskar-core = { path = "beskar-core" }
beskar-hal = { path = "beskar-hal" }
beskar-lib = { path = "beskar-lib" }
bootloader-api = { path = "bootloader/bootloader-api" }
hyperdrive = { path = "hyperdrive" }
thiserror = { version = "2.0.17", default-features = false }

[build-dependencies]
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bashkar = { path = "userspace/bashkar", artifact = "bin", target = "x86_64-unknown-none" }
# doom = { path = "userspace/doom", artifact = "bin", target = "x86_64-unknown-none" }

[profile.release]
panic = "abort"
lto = "fat"
strip = "symbols"

[profile.dev]
panic = "abort"
