[package]
name = "bootloader"
version = "1.0.1"
edition = "2024"

[dependencies]
hyperdrive = { workspace = true }
noto-sans-mono-bitmap = { version = "0.3.1", features = ["size_20"] }
uefi = "0.33.0"
xmas-elf = "0.9.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
