[package]
name = "bootloader"
version = "1.0.1"
edition = "2024"

[dependencies]
beskar-core = { workspace = true }
hyperdrive = { workspace = true }
uefi = { version = "0.34.1", default-features = false }
xmas-elf = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
