[package]
name = "bootloader"
version = "1.0.1"
edition = "2024"

[dependencies]
beskar-core = { workspace = true }
beskar-hal = { workspace = true }
bootloader-api = { workspace = true }
hyperdrive = { workspace = true }
uefi = { version = "0.35.0", default-features = false }
xmas-elf = { workspace = true }
