[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = { path = "foundry/acpi" }
beskar-core = { workspace = true }
beskar-hal = { workspace = true }
bootloader-api = { workspace = true }
driver-api = { path = "driver-api" }
holonet = { path = "foundry/holonet" }
hyperdrive = { workspace = true }
linked_list_allocator = { version = "0.10.5", default-features = false }
pci = { path = "foundry/pci" }
storage = { path = "foundry/storage" }
thiserror = { workspace = true }
video = { path = "foundry/video" }
xmas-elf = { workspace = true }
