[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = { path = "foundry/acpi" }
beskar-core = { workspace = true }
beskar-hal = { workspace = true }
elf = { path = "src/process/binary/elf" }
bootloader-api = { workspace = true }
driver-api = { path = "driver-api" }
holonet = { path = "foundry/holonet" }
hyperdrive = { workspace = true }
heaperion = { path = "../heaperion" }
pci = { path = "foundry/pci" }
storage = { path = "foundry/storage" }
thiserror = { workspace = true }
video = { path = "foundry/video" }
