[package]
name = "bashkar"
version = "0.1.0"
edition = "2024"

[dependencies]
beskar-core = { workspace = true }
beskar-lib = { workspace = true }
hyperdrive = { workspace = true}
noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = ["font_weights_default", "size_20", "unicode_ranges_all"] }
